# DeviceAccess-TangoBackend

./: CMakeLists.txt
include/: OfflineCache.h  RegisterCatalogue.h  TangoBackend.h  TangoRegisterAccessor.h
src/: OfflineCache.cc  RegisterCatalogue.cc  TangoBackend.cc
tests/: test.dmap  unifiedBackendTestCache.json
tests/executables_src/: testUnifiedBackend.cpp  testValidityPropagation.cpp
tests/lib/: TangoServerLauncher.cpp  TangoServerLauncher.h
tools/: generateCacheFile.py  tgTest.json
